updated readme with handler blocks

--- a/GGReadability/README
+++ b/GGReadability/README
@@ -29,6 +29,15 @@ Ported to object-c for much improved speed and compatibility.
  
  [read setHint:@"hello world!"];
  
+ if you know the site is going to cause pain when parsing, for instance, gizmodo uses JavaScript to inject content in then you can add custom handlers per domain and return a string back to readability
+ which will then parse what you return, for example :
+ 
+ [GGReadability addURLHandler:^NSString * ( NSString * parsedString )
+ {
+ 	// do something with the string
+ 	return parsedString;
+ } forURL:someURL];
+ 
  now call render to do the parsing
  
  [read render];
